--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,11 @@
 
 Testing/*
 Testing
+
+Peakfinder Input
+Peakfinder Input Buttered
+Peakfinder Input Spectral
+Peakfinder Input Buttered\*
+Peakfinder Input Spectral\*
+
+PSD_plots Buttered
